load("@desktop_crates//:defs.bzl", "all_crate_deps")
load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")
load("//tools/bazel:defs.bzl", "tauri_acl_prep_dir", "tauri_context_support_dir")

package(default_visibility = ["//visibility:public"])

exports_files([
    "Cargo.lock",
    "Cargo.toml",
    "Info.plist",
    "build.rs",
    "tauri.conf.json",
])

filegroup(
    name = "cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "Info.plist",
        "build.rs",
        "tauri.conf.json",
    ] + glob([
        "capabilities/**",
        "icons/**",
        "src/**/*.rs",
    ]),
)

filegroup(
    name = "context_cargo_srcs",
    srcs = [
        "Cargo.lock",
        "Cargo.toml",
        "Info.plist",
        "tauri.conf.json",
    ] + glob([
        "capabilities/**",
        "icons/**",
    ]),
)

filegroup(
    name = "icons",
    srcs = glob(["icons/**"]),
)

filegroup(
    name = "capabilities",
    srcs = glob(["capabilities/**"]),
)

filegroup(
    name = "tauri_build_data",
    srcs = [
        "Info.plist",
        "tauri.conf.json",
        "//:frontend_dist",
        ":capabilities",
        ":icons",
    ],
)

genrule(
    name = "embedded_assets_rust",
    srcs = ["//:frontend_dist"],
    tools = [
        "@rules_tauri//tools/tauri_brotli_compress:tauri_brotli_compress_exec",
        "@rules_tauri//tools/tauri_brotli_compress:tauri_transform_assets_exec",
        "@rules_tauri//tools:tauri_embedded_assets_rust_exec",
    ],
    outs = ["embedded_assets_rust.rs"],
    cmd = "$(execpath @rules_tauri//tools:tauri_embedded_assets_rust_exec) --transformer $(execpath @rules_tauri//tools/tauri_brotli_compress:tauri_transform_assets_exec) --compressor $(execpath @rules_tauri//tools/tauri_brotli_compress:tauri_brotli_compress_exec) --compression-quality 2 $(location //:frontend_dist) $@",
)

tauri_acl_prep_dir(
    name = "desktop_build_script_acl_prep",
    cargo_srcs = ":context_cargo_srcs",
    dep_env_targets = [
        "@desktop_crates__tauri-2.10.3//:build_script_build",
        "@desktop_crates__tauri-plugin-dialog-2.6.0//:build_script_build",
        "@desktop_crates__tauri-plugin-opener-2.5.3//:build_script_build",
        "@desktop_crates__tauri-plugin-shell-2.3.5//:build_script_build",
        "@desktop_crates__tauri-plugin-sql-2.3.2//:build_script_build",
        "@desktop_crates__tauri-plugin-webdriver-0.2.1//:build_script_build",
    ],
    frontend_dist = "//:frontend_dist",
    tauri_build_data = ":tauri_build_data",
)

tauri_context_support_dir(
    name = "full_context_rust_support",
    acl_out_dir = ":desktop_build_script_acl_prep",
    cargo_srcs = ":context_cargo_srcs",
    embedded_assets_rust = ":embedded_assets_rust",
    tauri_build_data = ":tauri_build_data",
)

genrule(
    name = "kanna_desktop_lib_rs",
    srcs = [
        ":full_context_rust_support",
        "src/lib.rs",
    ],
    tools = ["//tools/bazel:normalize_tauri_context.py"],
    outs = ["src/lib_bazel.rs"],
    cmd = """
python3 - "$(location src/lib.rs)" "$(location :full_context_rust_support)" "$(location //tools/bazel:normalize_tauri_context.py)" "$@" <<'PY'
import json
import pathlib
import re
import sys

src = pathlib.Path(sys.argv[1]).read_text(encoding="utf-8")
support_dir = pathlib.Path(sys.argv[2])
helper_path = pathlib.Path(sys.argv[3])
sys.path.insert(0, str(helper_path.parent))
from normalize_tauri_context import normalize_generated_context
support_dir_literal = json.dumps(f"../{support_dir.name}")
context = (support_dir / "full_context_rust.rs").read_text(encoding="utf-8")
context = re.sub(
    r'::\\s*std\\s*::\\s*env\\s*!\\s*\\(\\s*"OUT_DIR"\\s*\\)',
    support_dir_literal,
    context,
)
context = normalize_generated_context(context)
needle = "tauri::generate_context!()"
if needle not in src:
    raise SystemExit(f"missing {needle} in src/lib.rs")
src = src.replace(needle, context, 1)
pathlib.Path(sys.argv[4]).write_text(
    "// Bazel release builds consume the generated Tauri context directly.\\n" + src,
    encoding="utf-8",
)
PY
""",
)

cargo_build_script(
    name = "desktop_build_script",
    srcs = ["build.rs"],
    crate_root = "build.rs",
    edition = "2021",
    rundir = "apps/desktop/src-tauri",
    version = "0.0.32",
    deps = all_crate_deps(
        build = True,
        package_name = "apps/desktop/src-tauri",
    ),
    link_deps = [
        "@desktop_crates//:tauri",
        "@desktop_crates//:tauri-plugin-dialog",
        "@desktop_crates//:tauri-plugin-opener",
        "@desktop_crates//:tauri-plugin-shell",
        "@desktop_crates//:tauri-plugin-sql",
        "@desktop_crates//:tauri-plugin-webdriver",
    ],
    proc_macro_deps = all_crate_deps(
        build_proc_macro = True,
        package_name = "apps/desktop/src-tauri",
    ),
    data = [
        "//:VERSION",
        ":cargo_srcs",
        ":tauri_build_data",
    ],
    compile_data = [
        "//:VERSION",
        ":cargo_srcs",
        ":tauri_build_data",
    ],
    build_script_env = {
        "DEP_TAURI_DEV": "false",
        "KANNA_BUILD_BRANCH": "",
        "KANNA_BUILD_COMMIT": "",
        "KANNA_BUILD_WORKTREE": "",
        "KANNA_VERSION_FILE": "$(location //:VERSION)",
        "TAURI_CONFIG": "{\"bundle\":{\"externalBin\":[],\"resources\":[]}}",
    },
)

rust_library(
    name = "kanna_desktop_lib",
    srcs = glob(["src/**/*.rs"], exclude = ["src/main.rs"]),
    crate_root = "src/lib.rs",
    crate_name = "kanna_desktop_lib",
    edition = "2021",
    deps = all_crate_deps(
        normal = True,
        package_name = "apps/desktop/src-tauri",
    ) + [
        ":desktop_build_script",
        "//crates/claude-agent-sdk:claude_agent_sdk",
        "//crates/tauri-plugin-delta-updater:tauri_plugin_delta_updater",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        package_name = "apps/desktop/src-tauri",
    ),
)

rust_library(
    name = "kanna_desktop_lib_bazel",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs", "src/main.rs"]) + [":kanna_desktop_lib_rs"],
    crate_root = "src/lib_bazel.rs",
    crate_name = "kanna_desktop_lib",
    edition = "2021",
    compile_data = [
        ":full_context_rust_support",
    ],
    rustc_env = {
        "KANNA_BUILD_BRANCH": "",
        "KANNA_BUILD_COMMIT": "",
        "KANNA_BUILD_INFO": "",
        "KANNA_BUILD_WORKTREE": "",
        "KANNA_VERSION": "0.0.33",
    },
    deps = all_crate_deps(
        normal = True,
        package_name = "apps/desktop/src-tauri",
    ) + [
        "//crates/claude-agent-sdk:claude_agent_sdk",
        "//crates/tauri-plugin-delta-updater:tauri_plugin_delta_updater",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
        package_name = "apps/desktop/src-tauri",
    ),
)

rust_binary(
    name = "kanna_desktop",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_desktop",
    binary_name = "kanna-desktop",
    edition = "2021",
    deps = [
        ":desktop_build_script",
        ":kanna_desktop_lib",
    ],
)

rust_binary(
    name = "kanna_desktop_bazel",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_desktop",
    binary_name = "kanna-desktop",
    edition = "2021",
    deps = [
        ":kanna_desktop_lib_bazel",
    ],
)

rust_binary(
    name = "kanna_desktop_x86_64",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_desktop",
    binary_name = "kanna-desktop",
    edition = "2021",
    deps = [
        ":desktop_build_script",
        ":kanna_desktop_lib",
    ],
    platform = "//tools/bazel:macos_x86_64",
)

rust_binary(
    name = "kanna_desktop_x86_64_bazel",
    srcs = glob(["src/**/*.rs"], exclude = ["src/lib.rs"]),
    crate_root = "src/main.rs",
    crate_name = "kanna_desktop",
    binary_name = "kanna-desktop",
    edition = "2021",
    deps = [
        ":kanna_desktop_lib_bazel",
    ],
    platform = "//tools/bazel:macos_x86_64",
)
